--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: 台語文記憶 冊讀á
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Tâi-gí-bûn Kì-ek Chheh-tha̍k-á
-baseurl: "/scannedImgViewer"
+baseurl: ""
 url: "https://kiek.taigi.info/"
 
 # navigation
