--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: 台語文記憶 冊讀á
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Tâi-gí-bûn Kì-ek Chheh-tha̍k-á
-baseurl: ""
-url: "https://kiek.taigi.info/"
+baseurl: "/scannedImgViewer"
+url: "https://kiek.taigi.info"
 
 # navigation
 header_pages:
